Fix Undefined `base.composer`

--- a/special-characters/languages/en_US/speak.txt
+++ b/special-characters/languages/en_US/speak.txt
@@ -1,2 +1,2 @@
-plugin_sc_title_modal: Select Character to Insert
+plugin_sc_title_modal: Select Special Character
 plugin_sc_title_button: Special Character
